code/tui/snapshots/fullscreen/modal/home_after_modal_closed.snap
---
source: code/tui/src/app/fullscreen/modal_tests.rs
expression: frame_text(&app)
---
  .                                                                                    [Dashboard]  
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
  ────────────────────────────────────────────────────────────────────────────────────────────────  
  > preserved draft                                                                                 
  ─────────────────────────────────────────────────────────────────────────────── Automatic model   
                                                                                                    
  ⏸ Manual
