code/tui/snapshots/fullscreen/modal/memories_management.snap
---
source: code/tui/src/app/fullscreen/modal_tests.rs
expression: frame_text(&app)
---
  .                                                                                    [Dashboard]  
                                                                                                    
                                                                                                    
            ┌── Memories ─────────────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │   Personal    Projects                                                  │             
            │                                                                         │             
            │> + New Memory                                                           │             
            │  Memories off · c Config                                                │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ Search this scope                                                  │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │  No memories yet.                                                       │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
  ──────────└─────────────────────────────────────────────────────────────────────────┘───────────  
  > background draft                                                                                
  ─────────────────────────────────────────────────────────────────────────────── Automatic model   
                                                                                                    
  Enter new · ↓ search · Tab tabs · Esc close
