code/tui/snapshots/fullscreen/modal/memories_search_results.snap
---
source: code/tui/src/app/fullscreen/modal_tests.rs
expression: frame_text(&app)
---
  .                                                                                    [Dashboard]  
                                                                                                    
  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮  
  │         ┌── Memories ─────────────────────────────────────────────────────────[✗]─┐          │  
  │    ▄  ▄ │                                                                         │          │  
  │  ▗█▛██▜█│   Personal    Projects                                                  │          │  
  │  ▝▜████▛│                                                                         │          │  
  │    ▝  ▘ │  + New Memory                                                           │          │  
  │         │                                                                         │          │  
  │         │  ╭────────────────────────────────────────────────────────────────────╮ │          │  
  │         │  │ Rust                                                               │ │          │  
  │         │  ╰────────────────────────────────────────────────────────────────────╯ │          │  
  │         │> Rust decision 0    Keep shared behavior in     User maintained · 11-14 │          │  
  │         │  Rust decision 1    Keep shared behavior in     User maintained · 11-14 │          │  
  ╰─────────│  Rust decision 2    Keep shared behavior in     User maintained · 11-14 │──────────╯  
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
  ──────────└─────────────────────────────────────────────────────────────────────────┘───────────  
  > Build anything                                                                                  
  ─────────────────────────────────────────────────────────────────────────────── Automatic model   
                                                                                                    
  Enter view · n new · a actions · Tab tabs · / search · Esc close
