code/tui/snapshots/fullscreen/modal/project_branch_creation_error_fullscreen.snap
---
source: code/tui/src/app/fullscreen/modal_tests.rs
expression: frame_text(&app)
---
  .                                                                                    [Dashboard]  
                                                                                                    
                                                                                                    
            ┌── Project branches › New branch ────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │  Create branch                                                          │             
            │                                                                         │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ ash/topic                                                          │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │  branch already exists                                                  │             
            │  Create a branch at HEAD without switching worktrees.                   │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
  ──────────└─────────────────────────────────────────────────────────────────────────┘───────────  
  > Build anything                                                                                  
  ─────────────────────────────────────────────────────────────────────────────── Automatic model   
                                                                                                    
  Enter to create  ·  Esc to back
